minor design fixes

--- a/src/main/webapp/leagues/matches/list.xhtml
+++ b/src/main/webapp/leagues/matches/list.xhtml
@@ -20,7 +20,7 @@
 					<td>
 						<div class="button_01">
 							<h:form>
-								<h:commandLink id="add"
+								<h:commandLink id="add" styleClass="wide"
 									action="#{matchesController.generateMatches}"
 									value="Generate matches">
 									<f:param name="leagueID" value="#{matchesController.league.id}" />
