--- a/src/main/webapp/sports/leagues/index.xhtml
+++ b/src/main/webapp/sports/leagues/index.xhtml
@@ -86,7 +86,7 @@
 						<c:forEach items="#{sportLeagues}" var="wrapper">
 							<tr>
 								<td>#{wrapper.league.name}</td>
-								<td>#{wrapper.league.description}</td>
+								<td style="width: 160px;">#{wrapper.league.description}</td>
 								<td>#{wrapper.league.sport.name}</td>
 								<td>
 									<c:choose>
